feat(admin): Implement admin dashboard with login, analytics, user & event management

--- a/public/index.html
+++ b/public/index.html
@@ -51,4 +51,13 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+  <style>
+
+body {
+   
+    background-color: #121212;
+   
+}
+</style>
 </html>
